# ofxstatement-de-ing

./: .gitignore  .travis.yml  Makefile  README.rst  ReadMe.md  setup.cfg  setup.py
.github/workflows/: makefile.yml
src/ofxstatement/plugins/: ingde.py
src/ofxstatement_de_ing/: __init__.py  ingde.py
test/: test_ingde.py  test_with_saldo.csv  test_with_saldo_1.csv  test_with_saldo_2.csv  test_without_saldo_1.csv  test_without_saldo_2.csv
