[metadata]
name = ofxstatement-de-ing
version = 0.1.0
author = Faha
author_email = dev-faha@t-online.de
url = https://github.com/fabolhak/ofxstatement-de-ing
description = OFXStatement plugin for ING (Germany / Deutschland)
long_description = file: ReadMe.md
long_description_content_type = text/markdown
license = GPLv3
keywords = ofx, banking, statement
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Natural Language :: English
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Utilities
    Environment :: Console
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
install_requires =
    ofxstatement
include_package_data = True
zip_safe = True
tests_require =
    mock

[options.packages.find]
where = src
exclude =
    ofxstatement*

[options.entry_points]
ofxstatement =
    ingde = ofxstatement_de_ing.ingde:IngDePlugin

[options.extras_require]
test =
    mock
    pytest
    pytest-cov
